# intelliweave-learn

./: README.md
backend-lgraph/: .gitignore  .secrets.example.toml  README.md  api.py  pyproject.toml  settings.example.toml
backend-lgraph/graph_agent/: agent.py  build_agent.py  research_state.py
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: intelliweave-connect.ts
frontend/src/components/Composer/: LessonComposer.tsx
frontend/src/components/HeaderTabs/: NavbarSimple.module.css  NavbarSimple.tsx
frontend/src/components/LessonsList/: LessonsList.module.css  LessonsList.tsx
frontend/src/components/LinkView/: LinkView.tsx
frontend/src/components/MDEditor/: MDEditor.module.css  MDEditor.tsx
frontend/src/components/MStreamWriter/: MStreamWriter.tsx  useInterval.tsx
frontend/src/components/MarkMap/: MarkMap.tsx  mmap.ts
frontend/src/components/SMECard/: SMECard.tsx
frontend/src/components/SMEMiniSelect/: SMEMiniSelect.tsx
frontend/src/components/Steps/: FinalArticle.tsx  FinalOutline.tsx  GenerateSME.tsx  ReferenceReview.tsx  RoughOutline.tsx  SMEInterviews.tsx  StepLoader.tsx  TopicDiscovery.tsx  common.ts
frontend/src/components/Wand/: Wand.tsx  wand.lottie
