[tool.poetry]
name = "backend-lgraph"
version = "0.1.0"
description = ""
authors = ["amithkk <amithkumaran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langserve = {extras = ["all"], version = "^0.1.1"}
langchain = "0.1.16"
aiohttp = "3.9.4"
aiosignal = "1.3.1"
aiosqlite = "0.20.0"
annotated-types = "0.6.0"
anyio = "4.3.0"
appnope = "0.1.4"
asttokens = "2.4.1"
attrs = "23.2.0"
beautifulsoup4 = "4.12.3"
cachetools = "5.3.3"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
comm = "0.2.2"
curl-cffi = "0.6.3"
dataclasses-json = "0.6.4"
debugpy = "1.8.1"
decorator = "5.1.1"
distro = "1.9.0"
docstring-parser = "0.16"
duckduckgo-search = "5.3.0"
executing = "2.0.1"
fastapi = "0.110.2"
frozenlist = "1.4.1"
google-ai-generativelanguage = "0.6.1"
google-api-core = "2.18.0"
google-api-python-client = "2.125.0"
google-auth = "2.29.0"
google-auth-httplib2 = "0.2.0"
google-cloud-aiplatform = "1.48.0"
google-cloud-bigquery = "3.21.0"
google-cloud-core = "2.4.1"
google-cloud-resource-manager = "1.12.3"
google-cloud-storage = "2.16.0"
google-crc32c = "1.5.0"
google-generativeai = "0.5.0"
google-resumable-media = "2.7.0"
googleapis-common-protos = "1.63.0"
greenlet = "3.0.3"
grpc-google-iam-v1 = "0.13.0"
grpcio = "1.62.1"
grpcio-status = "1.62.1"
h11 = "0.14.0"
httpcore = "1.0.5"
httplib2 = "0.22.0"
httpx = "0.27.0"
idna = "3.7"
ipykernel = "6.29.4"
ipython = "8.23.0"
jedi = "0.19.1"
joblib = "1.4.0"
jsonpatch = "1.33"
jsonpickle = "3.0.4"
jsonpointer = "2.4"
jupyter-client = "8.6.1"
jupyter-core = "5.7.2"
langchain-community = "0.0.32"
langchain-core = "0.1.46"
langchain-google-genai = "1.0.2"
langchain-google-vertexai = "1.0.1"
langchain-google-firestore = "0.3.0"
langchain-text-splitters = "0.0.1"
langchainhub = "0.1.15"
langgraph = "0.0.39"
langsmith = "0.1.51"
marshmallow = "3.21.1"
matplotlib-inline = "0.1.6"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
nest-asyncio = "1.6.0"
numpy = "1.26.4"
openai = "1.17.1"
orjson = "3.10.0"
packaging = "23.2"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "10.3.0"
platformdirs = "4.2.0"
playwright = "1.43.0"
prompt-toolkit = "3.0.43"
proto-plus = "1.23.0"
protobuf = "4.25.3"
psutil = "5.9.8"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pycparser = "2.22"
pydantic = "2.7.0"
pydantic-core = "2.18.1"
pyee = "11.1.0"
pygments = "2.17.2"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
pyyaml = "6.0.1"
pyzmq = "25.1.2"
regex = "2023.12.25"
requests = "2.31.0"
rsa = "4.9"
scikit-learn = "1.4.2"
scipy = "1.13.0"
shapely = "2.0.4"
simplejson = "3.19.2"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.5"
sqlalchemy = "2.0.29"
stack-data = "0.6.3"
starlette = "0.37.2"
tenacity = "8.2.3"
threadpoolctl = "3.4.0"
tiktoken = "0.6.0"
tornado = "6.4"
tqdm = "4.66.2"
traitlets = "5.14.2"
types-protobuf = "4.25.0.20240417"
types-requests = "2.31.0.20240406"
typing-inspect = "0.9.0"
typing-extensions = "4.11.0"
uritemplate = "4.1.1"
urllib3 = "2.2.1"
wcwidth = "0.2.13"
wikipedia = "1.4.0"
yarl = "1.9.4"
amithlgmodules = { git = "ssh://git@github.com:amithkk/lg_modules.git" }
dynaconf = "^3.2.5"
langchain-google-alloydb-pg = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
